--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "mongojs": "^2.4.1",
+    "mongoose": "^5.0.3",
     "request": "^2.83.0"
   }
 }
